--- a/src/components/HeaderPersonal/headerPersonal.css
+++ b/src/components/HeaderPersonal/headerPersonal.css
@@ -14,3 +14,12 @@
     color: var(--azul-escuro);
 }
 
+.header-personal h1{
+    font-weight: bold;
+}
+
+@media screen and (max-width:400px) {
+      .header-personal h1{
+           font-size: 14px;
+      }
+}
