--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,7 +1,10 @@
 .main{
     background-color: var(--azul-escuro);
     min-height: 100vh;
-    
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+   
 }
 
 .carrosel{
@@ -15,7 +18,7 @@
 
 .carrosel-item img{
     height: 100%;
-    filter:opacity(.9);
+    filter:opacity(.5);
 
 }
 
@@ -41,21 +44,28 @@
 }
 
 /* CARDS */
+.wrapper-container-cards{
+    width: 100%;
+    max-width: 1225px;
+    margin: auto;
+    padding: 0 20px;
+}
 
 .container-cards{
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 23em);
-    gap: 4em 5em;
-    justify-content: center;
-
+    grid-template-columns: repeat(3, minmax(0,1fr));
+    gap: 50px;
+ 
 }
 
 .card{
+  width: 100%;
   background-color: var(--azul-meio);
   color: var(--azul-escuro);
   font-weight: bold;
-   filter: drop-shadow(2px 3px 5px var(--azul-fraco));
-   transition: transform .3s;
+  filter: drop-shadow(2px 3px 5px var(--azul-fraco));
+  transition: transform .3s;
     
 }
 
@@ -73,9 +83,12 @@
     margin-bottom: 1em;
 }
 
+
 .card-text{
     color: var(--azul-escuro);
     font-family: 'Montserrat', sans-serif;
+    user-select: none;
+ 
 }
 
 .card-footer{
@@ -86,7 +99,18 @@
     
 }
 
+@media screen and (max-width:1004px) {
+    .container-cards{
+        grid-template-columns: repeat(2, minmax(0,1fr));
+        gap: 10px;
+    }   
+}
+
 @media screen and (max-width: 26.25em) {
+    .wrapper-container-cards{
+        padding: 0 10px;
+    }
+
     .carrosel, .carrosel-item{
         height: 10em;   
     }
@@ -101,22 +125,18 @@
           
     }
 
-    .container-cards{
-        grid-template-columns: repeat(2, 10em);
-        gap: .7em .5em;
-    }
     .card{
-        min-height: 7em;
         filter: drop-shadow(1px 1px 2px var(--azul-fraco));
 
     }
 
     .card-header{
-       font-size: 22%;
+       font-size: 30%;
+
     }
 
     .card-footer{
-        font-size:22%;
+        font-size:25%;
         
     }
 
@@ -125,11 +145,13 @@
     }
 
     .card-text, .card-title{
-        font-size: 45%;
+        font-size: 50%;
+
         
     }
     .card-body{
-        padding: 7px;
+        padding: 8px 2px;
+
     }
 
 
@@ -146,40 +168,26 @@
 
 @media screen and (max-width: 329px){
     .container-cards{
-        grid-template-columns: repeat(2, 150px);
-   
+        grid-template-columns: repeat(2, minmax(0,1fr));
+        gap: 10px;
     }
-    .card{
-        min-height: 5em;
-        max-width: 150px;
-    
-    }
-
+ 
   
 }
 @media screen and (max-width: 316px){
     .container-cards{
-        grid-template-columns: repeat(2, 140px);
+        grid-template-columns: repeat(2, minmax(0,1fr));
    
     }
-    .card{
-        min-height: 5em;
-        max-width: 140px;
-    
-    }
-
+ 
   
 }
 @media screen and (max-width: 296px){
     .container-cards{
-        grid-template-columns: repeat(2, 135px);
+        grid-template-columns: repeat(2, minmax(0,1fr));
    
     }
-    .card{
-        min-height: 5em;
-        max-width: 135px;
     
-    }
 
   
 }
