--- a/src/pages/Postagem/postagem.css
+++ b/src/pages/Postagem/postagem.css
@@ -65,12 +65,11 @@
           flex-direction: column;   
      }
      .header-postagem h1{
-        font-size: 20px;
+        font-size: 15px;
+        font-weight: bold;
      }
 
-     .conatainer-public{
-        padding: 0 2em;
-     }
+    
      .public-form{
          border-radius: 10px;
          box-shadow: 1px 1px 6px 4px #1075af;
